# Py_WEB_05

./: Dockerfile  dual_logger.py  entrypoint.sh  example_response.txt  exchange_log.txt  extra.py  fields_name_response.py  index.css  index.html  index.js  main.py  pyproject.toml  readme.md  server.py  server_log.txt
client/: index.js
