[tool.poetry]
name = "py-web-05"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_05"}]

[tool.poetry.dependencies]
python =  ">=3.11,<4"
aiohttp = "^3.9.1"
websockets = "^12.0"
aiofile = "^3.8.8"
click = "^8.1.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
