[tool.poetry]
name = "py-web-05"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
websockets = "^12.0"
datetime = "^5.4"
aiohttp = "^3.9.3"
names = "^0.3.0"
aiopath = "^0.7.7"
aiofile = "^3.8.8"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
