[tool.poetry]
name = "py-web-05"
version = "0.1.0"
description = ""
authors = ["siracencoserghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
websockets = "^12.0"
datetime = "^5.4"
aiohttp = "^3.9.3"

path = "^16.10.0"
async-timeout = "^4.0.3"
aioredis = "^2.0.1"
aiofiles = "^23.2.1"
faker = "^22.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
